--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,11 +7,8 @@
     "experimentalDecorators": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    "module": "commonjs",
-    "moduleResolution": "node",
     "outDir": "dist",
     "target": "es5",
-    "lib": ["es2015", "dom"]
   },
-  "include": ["src/index.ts"]
+  "include": ["src/**/*.ts"],
 }
