🔧 cliの名前を指定できるように

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@hisho/image-optimizer",
   "version": "0.0.1",
   "types": "dist/index.d.ts",
-  "bin": "bin/index.js",
+  "bin": {
+    "image-optimizer": "bin/index.js"
+  },
   "files": [
     "dist"
   ],
