--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "outDir": "dist",
-    "target": "es5",
+    "target": "es5"
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts"]
 }
